--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,41 +1,20 @@
-all: libCircle.a circledemo.elf
-
-CPU             = msp430g2553
-CFLAGS          = -mmcu=${CPU} -Os -I../h
+# makfile configuration
+CPU             	= msp430g2553
+CFLAGS          	= -mmcu=${CPU} -Os -I../h
 LDFLAGS		= -L../lib -L/opt/ti/msp430_gcc/include/ 
 
 #switch the compiler (for the internal make rules)
 CC              = msp430-elf-gcc
-AS              = msp430-elf-as
-AR              = msp430-elf-ar
+AS              = msp430-elf-gcc -mmcu=${CPU} -c
 
-abCircle_decls.h abCircle.h chordVec.h libCircle.a: makeCircles.c abCircle.o  _abCircle.h Makefile 
-	cc -o makeCircles makeCircles.c
-	rm -rf circles; mkdir circles
-	./makeCircles
-	cat _abCircle.h abCircle_decls.h > abCircle.h
-	(cd circles; $(CC) -I.. -I../../h -mmcu=${CPU} -Os -c *.c)
-	$(AR) crs libCircle.a circles/*.o abCircle.o
+all:shapemotion.elf
 
-abCircle.o: _abCircle.h abCircle.c 
+#additional rules for files
+shapemotion.elf: ${COMMON_OBJECTS} shapemotion.o wdt_handler.o
+	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^ -lTimer -lLcd -lShape -lCircle -lp2sw
 
-install: libCircle.a abCircle.h chordVec.h
-	mkdir -p ../h ../lib
-	cp libCircle.a ../lib
-	cp abCircle.h chordVec.h ../h
-
-
-clean:
-	rm -f libCircle.a abCircle.h abCircle_decls.h chordVec.h *.o *.elf makeCircles
-	rm -rf circles
-
-circledemo.elf: circledemo.o libCircle.a
-	$(CC) $(CFLAGS) $(LDFLAGS) $^  -lLcd -lTimer -lShape -o $@
-
-
-load: circledemo.elf
+load: shapemotion.elf
 	mspdebug rf2500 "prog $^"
 
-
-
-
+clean:
+	rm -f *.o *.elf
